# radxa_converter_QT

./:  README.md  CMakeLists.txt  README.md  check_deps_ubuntu25.sh  install_dependencies_ubuntu25.sh  Структура проекта.txt
resources/: resources.qrc
resources/styles/: dark.qss
src/: batchqueuedialog.cpp  batchqueuedialog.h  conversionworker.cpp  conversionworker.h  ffmpegparser.cpp  ffmpegparser.h  filemanagerdialog.cpp  filemanagerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  profilesdialog.cpp  profilesdialog.h  settingsmanager.cpp  settingsmanager.h  sshclient.cpp  sshclient.h
